--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "mongodb": "^6.9.0",
     "mongoose": "^8.7.1",
     "mongoose-unique-validator": "^4.0.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "pino": "^9.5.0",
+    "pino-pretty": "^13.0.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
